--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+body{
+  font-family: 'Roboto', sans-serif;
+}
+*{
+  margin:0;
+  padding: 0;
+}
+.wrapper{
+  background-color:  pink;  
+  margin:0 auto;
+  height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  overflow: hidden;
+}
+.box{
+  width:40%;  
+  margin:60px;
+  height:auto;  
+  padding:50px;
+  background-color: white;  
+  border-radius:5px;
+}
+.quote_container{
+  width:100%;    
+}
+.quote_text{
+  margin-bottom:20px;
+}
+.quote{
+  height:40px;
+  width:100%;
+  height:auto;
+}
+
+.soical{
+  width:100%;
+  margin-top:20px;
+  display:flex;
+  justify-content:space-between;
+  padding:10px;
+}
+.soical a button{
+  font-size:12px;
+  color:#333;
+  margin-top:20px;
+  
+}
+
+.twitter a{
   text-align: center;
+  text-decoration: none;    
+  color:white;
+  padding:10px;
+  border-radius:2px;
+  background-color:blue;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button{ 
+  border: none;
   color: white;
+  padding:10px;
+  text-align: center;
+  text-decoration: none;    
+  border-radius:2px;
+  background-color:blue;
 }
-
-.App-link {
-  color: #61dafb;
+p{
+  font-size:16px;
+  margin-bottom:30px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+cite{
+  width:100px;
 }
